clusters/hive/apps/hugo-gavriliu-com/k8s-manifests/hugo-gavriliu-com-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hugo-gavriliu-com
  labels:
    k8s-app: hugo-gavriliu-com
  namespace: hugo-gavriliu-com
spec:
  replicas: 3
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      k8s-app: hugo-gavriliu-com
  template:
    metadata:
      labels:
        k8s-app: hugo-gavriliu-com
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        # allowPrivilegeEscalation: false
      serviceAccountName: hugo-gavriliu-com
      containers:
        - image: ghcr.io/andreigavriliu/gavriliu.com
          imagePullPolicy: Always
          name: hugo-gavriliu-com
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              memory: 128Mi
      imagePullSecrets:
      - name: ghcr-login-secret
