clusters/hive/apps/hugo-gavriliu-com/k8s-manifests/hugo-gavriliu-com-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: hugo-gavriliu-com
  name: hugo-gavriliu-com
  namespace: hugo-gavriliu-com
spec:
  sessionAffinity: ClientIP
  ports:
    - name: hugo-gavriliu-com
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    k8s-app: hugo-gavriliu-com
  sessionAffinity: None
  type: ClusterIP
