clusters/hive/apps/hugo-gavriliu-com/k8s-manifests/hugo-gavriliu-com-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hugo-gavriliu-com
  namespace: hugo-gavriliu-com
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect@kubernetescrd
spec:
  rules:
    - host: gavriliu.com
      http:
        paths:
          - backend:
              service:
                name: hugo-gavriliu-com
                port:
                  number: 8080
            path: /
            pathType: Prefix
